--- a/Quickstart.yaml
+++ b/Quickstart.yaml
@@ -174,3 +174,56 @@
       - "10.10.20.13"
     delegate_to: localhost
 
+  - name: 09. Set Port Binding and Target
+    community.vmware.vmware_host_iscsi:
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      validate_certs: no
+      esxi_hostname: "{{ item }}"
+      iscsi_config:
+        vmhba_name: vmhba65
+        send_target:
+          address: 10.10.10.2
+    loop:
+      - "10.10.20.11"
+      - "10.10.20.12"
+      - "10.10.20.12"
+    delegate_to: localhost
+
+
+    - name: 10.Recan HBA for cluster
+      community.vmware.vmware_host_scanhba:
+        hostname: '{{ vcenter_hostname }}'
+        username: '{{ vcenter_username }}'
+        password: '{{ vcenter_password }}'
+        validate_certs: no
+        cluster_name: '{{ cluster_name }}'
+        rescan_hba: true
+      delegate_to: localhost
+
+
+    - name: 11.Wait for complete rescan HBA
+      wait_for:
+        timeout: 10
+      delegate_to: localhost
+
+
+    - name: 12.Mount iSCSI-01 datastore
+      community.vmware.vmware_host_datastore:
+        hostname: '{{ vcenter_hostname }}'
+        username: '{{ vcenter_username }}'
+        password: '{{ vcenter_password }}'
+        validate_certs: no
+        datastore_name: 'iSCSI-Horizon'
+        datastore_type: 'vmfs'
+        vmfs_device_name: 'naa.60003ff44dc75adc881b96b330bc1bdc'
+        vmfs_version: 6
+        esxi_hostname: '{{ item }}'
+        state: present
+      loop:
+        - "sa-esxi-01.vclass.local"
+        - "sa-esxi-02.vclass.local"
+        - "sa-esxi-03.vclass.local"
+      delegate_to: localhost
+
