--- a/Quickstart.yaml
+++ b/Quickstart.yaml
@@ -147,17 +147,17 @@
 
   - name: 09.vMotion tcp/ip stack gateway
     community.vmware.vmware_host_tcpip_stacks:
-      hostname: '{{ item.esxi_host }}'
+      hostname: '{{ item }}'
       username: '{{ esxi_username }}'
       password: '{{ esxi_password }}'
       validate_certs: no
-      esxi_hostname: '{{ item.esxi_host }}'
+      esxi_hostname: '{{ item }}'
       vmotion:
-        gateway: '{{ item.vmotion_gateway }}'        
-    with_items:
-    - { esxi_host: 10.10.20.11, vmotion_gateway: 10.10.22.1 }
-    - { esxi_host: 10.10.20.11, vmotion_gateway: 10.10.22.1 }
-    - { esxi_host: 10.10.20.11, vmotion_gateway: 10.10.22.1 }
+        gateway: 10.10.22.1
+    loop:
+      - "10.10.20.11"
+      - "10.10.20.12"
+      - "10.10.20.13"
     delegate_to: localhost
 
   - name: 10.Create Software iSCSI Adapter
